--- a/_includes/header/banner_big.html
+++ b/_includes/header/banner_big.html
@@ -8,7 +8,7 @@
         </h1>
 
         <hr />
-        <p style="color:white;text-shadow:0px 0px 5px black">Innovation, Collaboration and Inspiration</p>
+        <p style="color:white;text-shadow:0px 0px 5px white">Innovation, Collaboration and Inspiration</p>
     </header>
     <footer>
         <a href="#news" class="button circled scrolly">Start</a>
