--- a/_includes/text-content.html
+++ b/_includes/text-content.html
@@ -38,7 +38,7 @@
         }
 
         #{{include.section}} ul,ol{
-            color: white;
+            color: black;
             max-width: 900px;
             margin: 2rem auto;
             list-style: none;
