--- a/_includes/text-content.html
+++ b/_includes/text-content.html
@@ -34,7 +34,7 @@
         }
 
         #{{include.section}} h2 strong{
-            color: white;
+            color: black;
         }
 
         #{{include.section}} ul,ol{
