--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,16 +1,1 @@
-<!DOCTYPE HTML>
-<!--
-	Helios by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-      <meta charset="utf-8">
-      <meta http-equiv="refresh" content="0; URL='https://digi.nstc.gov.tw/AnnoucePage2.aspx'">
-      <title>重定向</title>
-    </head>
-    <body>
-      <p>您將被轉址到新的頁面...</p>
-    </body>
-</html>
+test
