--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,1 +1,64 @@
-test
+<!DOCTYPE HTML>
+<!--
+	Helios by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
+<html>
+	<head>
+		{% include head/seo.html %}
+		{% include head/include.html %}
+	</head>
+
+	<body class="homepage">
+		
+		<div id="page-wrapper">
+
+			<div id="header">
+				{% include header/banner_big.html %}
+				{% include header/nav.html %}
+			</div>
+			
+			{% 
+				include first-post-and-list.html 
+				dataset=site.news
+				title="NEWS"
+				section="news"
+				listlink="/news/"
+			%}
+						
+			{% 
+				include text-content.html 
+				section="section-vision"
+				content="_data/vision.md"
+				background-mode="color"
+				background="#f0f4f4"
+			%}
+
+			{% 
+				include text-content.html 
+				section="opportunities"
+				content="_data/opportunities.md"
+				background-mode="gradient"
+				background="rgb(143, 156, 191), rgb(77, 102, 142)"
+			%}
+
+			{% 
+				include carousel.html
+				section="actionplan"
+				title="ACTION PLAN"
+				dataset=site.actionplan
+				background-mode="color"
+				background="#f0f4f4"
+			%}
+
+			{% 
+				include footer.html
+			%}
+
+		</div>
+
+		{% include scripts.html %}
+	
+	</body>
+</html>
